# Kitaev_vmc

./: .gitignore  CMakeLists.txt
Matlab/ExactRslt/: ExactDiag.m  Get_A_Mat.m  IntrcMap_Kitaev.m  debug.m  main_Kitaev_groundstate.m  main_spin.m
Matlab/Plot/: Plot_one_point_function.m  plot_energy.m  plot_two_point_function.m
Matlab/stoMPS_Method/: AutomataInit.m  Canonicalization.m  CompressH.m  Energy.m  GetED_Ham.m  GetHam_IntrMap.m  GetLocalSpace.m  Get_beta_expTau.m  Initialize.m  IntrcMap_Kitaev.m  IntrcMap_SLXXZ.asv  Run_TDVP.m  contract.m  kron_continuously.m  main_kitaev_ground_state.m  main_stoMPS.m
Matlab/stoMPS_Method/TDVP/: EVOIm.m  Evo_TDVP.m  GetVal.m  TDVP.m  VariProdMPS.m  envi_R.m  main_C60.m  main_TDVP.m  main_TDVP_SETTN.m  main_test.m  onesite_prod.m  reverse.m  tensor_inner_prod.m  tensor_norm.m  twosite_prod.m
Run/4x4_Kitaev/: run_vmc_update.sh
Run/4x4_Kitaev/energy/: energy_err_trajectory  energy_sample0  energy_sample1  energy_sample10  energy_sample11  energy_sample12  energy_sample13  energy_sample14  energy_sample15  energy_sample16  energy_sample17  energy_sample18  energy_sample19  energy_sample2  energy_sample20  energy_sample21  energy_sample22  energy_sample23  energy_sample24  energy_sample25  energy_sample26  energy_sample27  energy_sample28  energy_sample29  energy_sample3  energy_sample30  energy_sample31  energy_sample32  energy_sample33  energy_sample34  energy_sample35  energy_sample36  energy_sample37  energy_sample38  energy_sample39  energy_sample4  energy_sample40  energy_sample41  energy_sample42  energy_sample43  (+26 more)
Run/4x4_Kitaev/log/: error.err
Run/4x4_Kitaev/peps/: gamma_ten_0-0.qlten  gamma_ten_0-1.qlten  gamma_ten_0-2.qlten  gamma_ten_0-3.qlten  gamma_ten_1-0.qlten  gamma_ten_1-1.qlten  gamma_ten_1-2.qlten  gamma_ten_1-3.qlten  gamma_ten_2-0.qlten  gamma_ten_2-1.qlten  gamma_ten_2-2.qlten  gamma_ten_2-3.qlten  gamma_ten_3-0.qlten  gamma_ten_3-1.qlten  gamma_ten_3-2.qlten  gamma_ten_3-3.qlten  lam_h_0-1.qlten  lam_h_0-3.qlten  lam_h_1-2.qlten  lam_h_2-1.qlten  lam_h_2-3.qlten  lam_h_3-2.qlten  lam_v_1-0.qlten  lam_v_1-1.qlten  lam_v_1-2.qlten  lam_v_1-3.qlten  lam_v_2-0.qlten  lam_v_2-1.qlten  lam_v_2-2.qlten  lam_v_2-3.qlten  lam_v_3-0.qlten  lam_v_3-1.qlten  lam_v_3-2.qlten  lam_v_3-3.qlten
Run/4x4_Kitaev/tps/: configuration0  configuration10  configuration12  configuration14  configuration15  configuration17  configuration22  configuration23  configuration25  configuration26  configuration27  configuration3  configuration30  configuration32  configuration35  configuration36  configuration38  configuration39  configuration40  configuration41  configuration42  configuration43  configuration45  configuration46  configuration47  configuration48  configuration49  configuration50  configuration51  configuration52  configuration53  configuration54  configuration55  configuration56  configuration61  configuration63  configuration7  configuration8  tps_ten0_0.qlten  tps_ten0_0_0.qlten  (+46 more)
Run/4x4_Kitaev/tpslowest/: tps_ten0_0_0.qlten  tps_ten0_0_1.qlten  tps_ten0_1_0.qlten  tps_ten0_1_1.qlten  tps_ten0_2_0.qlten  tps_ten0_2_1.qlten  tps_ten0_3_0.qlten  tps_ten0_3_1.qlten  tps_ten1_0_0.qlten  tps_ten1_0_1.qlten  tps_ten1_1_0.qlten  tps_ten1_1_1.qlten  tps_ten1_2_0.qlten  tps_ten1_2_1.qlten  tps_ten1_3_0.qlten  tps_ten1_3_1.qlten  tps_ten2_0_0.qlten  tps_ten2_0_1.qlten  tps_ten2_1_0.qlten  tps_ten2_1_1.qlten  tps_ten2_2_0.qlten  tps_ten2_2_1.qlten  tps_ten2_3_0.qlten  tps_ten2_3_1.qlten  tps_ten3_0_0.qlten  tps_ten3_0_1.qlten  tps_ten3_1_0.qlten  tps_ten3_1_1.qlten  tps_ten3_2_0.qlten  tps_ten3_2_1.qlten  tps_ten3_3_0.qlten  tps_ten3_3_1.qlten
Run/4x4_Kitaev_AFM/: run_vmc_update.sh  simple_update_params.json  vmc_update_params.json
Run/4x4_Kitaev_AFM/energy/: energy_err_trajectory  energy_sample0  energy_sample1  energy_sample10  energy_sample11  energy_sample12  energy_sample13  energy_sample14  energy_sample15  energy_sample16  energy_sample17  energy_sample18  energy_sample19  energy_sample2  energy_sample20  energy_sample21  energy_sample22  energy_sample23  energy_sample24  energy_sample25  (+46 more)
Run/4x4_Kitaev_Jx=0.01_Jy=1_Jz=1/: run_simple_update.sh  run_vmc_update.sh  simple_update_params.json  vmc_update_params.json
Run/4x4_Kitaev_Jx=1_Jy=0.01_Jz=1/: run_vmc_update.sh
Run/4x4_Kitaev_Jx=1_Jy=1_Jz=0.01/: run_vmc_update.sh  simple_update_params.json  vmc_update_params.json
run/peps/: gamma_ten_0-0.qlten  gamma_ten_0-1.qlten  gamma_ten_0-2.qlten  gamma_ten_0-3.qlten  gamma_ten_1-0.qlten  gamma_ten_1-1.qlten  gamma_ten_1-2.qlten  gamma_ten_1-3.qlten  gamma_ten_2-0.qlten  gamma_ten_2-1.qlten  gamma_ten_2-2.qlten  gamma_ten_2-3.qlten  gamma_ten_3-0.qlten  gamma_ten_3-1.qlten  gamma_ten_3-2.qlten  gamma_ten_3-3.qlten  lam_h_0-1.qlten  lam_h_0-3.qlten  lam_h_1-2.qlten  lam_h_2-1.qlten  lam_h_2-3.qlten  lam_h_3-2.qlten  lam_v_1-0.qlten  lam_v_1-1.qlten  lam_v_1-2.qlten  lam_v_1-3.qlten  lam_v_2-0.qlten  lam_v_2-1.qlten  lam_v_2-2.qlten  lam_v_2-3.qlten  lam_v_3-1.qlten  lam_v_3-2.qlten  lam_v_3-3.qlten  lam_v_4-0.qlten
run/tps/: tps_ten0_0.qlten  tps_ten0_1.qlten  tps_ten0_2.qlten  tps_ten0_3.qlten  tps_ten1_0.qlten  tps_ten1_1.qlten  tps_ten1_2.qlten  tps_ten1_3.qlten  tps_ten2_0.qlten  tps_ten2_1.qlten  tps_ten2_2.qlten  tps_ten2_3.qlten  tps_ten3_1.qlten  tps_ten3_2.qlten  tps_ten3_3.qlten
src/: Kitaev_lattice_simple_update.h  Kitaev_simple_update.cpp  Kitaev_tps_sample_Z2_update.h  Kitaev_vmc_update.cpp  kitaev111_simple_update.cpp  kitaev111_vmc_update.cpp  kitaev_111_mc_measure.cpp  kitaev_lattice_111_simple_update.h  kitaev_lattice_simple_update.h  kitaev_simple_update.cpp  kitaev_tps_sample_Z2_3site_update.h  kitaev_vmc_update.cpp  main.cpp  myutil.cpp  myutil.h  params_parser.h  qlcomplex.h  qldouble.h  simple_update_params.json  spin_onehalf_Kitaev.h  spin_onehalf_kitaev.h  spin_onehalf_kitaev111.h  vmc_params.json  vmc_update_params.json
src_dmrg/: dmrg.cpp  hilbert_space.h  measure1.cpp  measure2.cpp  mpogen.cpp  my_measure.h  myutil.cpp  myutil.h  operator.cpp  operator.h  params.json  params_case.h
(+826 files in other folders)
